# scraping-utility

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
scraping_utility/: carpet.py  pipeline.py
scraping_utility/core/parsing/: scraper.py
scraping_utility/core/utility/: constants.yml  visualize.py
scraping_utility/output/20241127_121846/: links.csv  metadata.csv  text_content.csv
